cloudformation/infra-rds.yml
Resources:
  DBInstance:
    Type: "AWS::RDS::DBInstance"
    Properties:
      DBInstanceIdentifier: "mydatabase"
      Engine: "MySQL"
      EngineVersion: "8.0.38"
      DBName: "mydatabase"
      MasterUsername: "admin"
      MasterUserPassword: "mypassword"
      AllocatedStorage: "20"
      DBInstanceClass: "db.t2.micro"
      VPCSecurityGroups:
        - !Ref DBSecurityGroup
      MultiAZ: false
      PubliclyAccessible: true

  EC2Instance:
    Type: "AWS::EC2::Instance"
    Properties:
      InstanceType: "t2.micro"
      ImageId: "ami-0c94855ba95c71c99"
      KeyName: "my-keypair"
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          echo "Hello World" >> /var/www/html/index.html
      SecurityGroupIds:
        - !Ref EC2SecurityGroup
      Tags:
        - Key: "Name"
          Value: "my-ec2-instance"

  DBSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: "Allow database access"
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          SourceSecurityGroupId: !Ref EC2SecurityGroup

  EC2SecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: "Allow SSH access"
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: "0.0.0.0/0"

  VPC:
    Type: "AWS::EC2::VPC"
    Properties:
      CidrBlock: "10.0.0.0/16"
      Tags:
        - Key: "Name"
          Value: "my-vpc"
